# telegram.dm.sender

./: .gitignore  Dockerfile  main.py  pyproject.toml
bot/: __init__.py  config.py  database.py
plugins/admin/: models.py
plugins/admin/utils/: admin_manager.py
plugins/admin/views/: adminhelp.py  ban.py  broadcast.py  user.py  users.py
plugins/core/: models.py
plugins/core/utils/: helpers.py
plugins/core/views/: help.py  start.py
